--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
   <body>
   <nav>
       <a href="/">Home</a>
-      <a href="/recipes/browseRecipes.html">Browse recipes</a>
-      <a href='/recipes/newRecipe.html'>Add new recipe</a>
-      <a href='/loginSystem/logout.html'>Logout  </a>
-      <a href='/loginSystem/adminPanel.html'>Admin panel </a>
-      <a href='/loginSystem/login.html'>Login</a>
-      <a href='/loginSystem/register.html'>Register</a>
+      <a href="/recipes/browseRecipes">Browse recipes</a>
+      <a href='/recipes/newRecipe'>Add new recipe</a>
+      <a href='/logout'>Logout  </a>
+      <a href='/admin'>Admin panel </a>
+      <a href='/login'>Login</a>
+      <a href='/register'>Register</a>
   </nav>
   </body>
 </html>
