--- a/templates/recipes/recipe.html
+++ b/templates/recipes/recipe.html
@@ -3,61 +3,43 @@
   <head>
     <meta charset="utf-8">
     <title>Recipe</title>
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" type= "text/css" href="{{ url_for('static',filename='assets/style.css') }}">
   </head>
   <body>
     <div class = "recipes">
       <h3> Recipe! </h3>
-        {% for recipe in recipes %}
-          <p class = 'title'> {{recipe.title}}</p>
-          <p class = 'description'>{{recipe.description}}</p>
+        <div class = 'title'> {{recipe.title}}</div>
+        <div class  = 'description'>{{recipe.description}}</div>
+
+        {% for step in recipe.steps %}
+          <div class = 'step'>{{step.description}}</div>
         {% endfor %}
-      echo "<div class = 'title'>" . $recipe['title'] . "</div>";
-      echo "<div class = 'description'> OPIS: " . $recipe['description'] . "</div>";
 
-      foreach ($recipe['steps'] as $step) {
-        echo "<div class = 'step'>" . $step . "</div>";
-      }
-      foreach ($recipe['ingredients'] as $ingredient) {
-        echo "<div class = 'ingredient'>";
-        echo $ingredient['name'] . '<br>';
-        echo $ingredient['quanity']['amount'] . " " . $ingredient['quanity']['unit'];
-        echo "</div>";
-      }
+        {% for ingredient in recipe.ingredients %}
+          <div class = 'ingredient'>{{ingredient.name}}<br>
+            {{ingredient.unit}} {{ingredient.amount}}
+          </div>
+        {% endfor %}
 
-      if (isset($_SESSION["loggedIn"]) && $_SESSION["loggedIn"] == true) {
-        echo "<div class = 'votes'>";
-        echo "<a class = 'posVote' href='/recipes/rate.php?id=" . $_GET['id'] . "&vote=pos'>Thumb up!</a><br>";
-        echo "<a class = 'negVote' href='/recipes/rate.php?id=" . $_GET['id'] . "&vote=neg'>Thumb down!</a><br>";
-        echo "<a class = 'removeVote' href='/recipes/rate.php?id=" . $_GET['id'] . "&vote=reset'>Remove vote!</a><br><br>";
-        echo "<a class = 'removeRecipe' href='/recipes/removeRecipe.php?id=" . $_GET['id'] . "'>Remove recipe!</a><br><br>";
-        echo "</div>";
-      }
 
-      echo "<div class = 'rates'>";
-      $posResult = $recipesColl->aggregate([['$project' => ['count' => ['$size' => '$positiveVoters']]], ['$match' => ['_id' => new MongoDB\BSON\ObjectID($_GET['id'])]]]);
-      foreach ($posResult as $result) {
-        echo "Positives: " . $result['count'] . "  <br>";
-      }
 
-      $negResult = $recipesColl->aggregate([['$project' => ['count' => ['$size' => '$negativeVoters']]], ['$match' => ['_id' => new MongoDB\BSON\ObjectID($_GET['id'])]]]);
-      foreach ($negResult as $result) {
-        echo "Negatives: " . $result['count'] . "  <br>";
-      }
+      <div class = 'votes'>
+        Positive: {{recipe.votesUp}}<br>
+        Negative: {{recipe.votesDown}}<br>
+        Rate: {{recipe.sum}}<br><br><br><br>
+        <div>
 
-      $tags = $recipesColl->aggregate([['$project' => ['tags' => 1]], ['$match' => ['_id' => new MongoDB\BSON\ObjectID($_GET['id'])]]]);
-      foreach ($tags as $result) {
-        echo "Tags: ";
-        foreach ($result['tags'] as $tag) {
-          echo "<a class = 'tag' href='/recipes/browseRecipes.php?textSearch=&tag=" . $tag . "'>" . $tag . "</a> ";
-        }
-      }
-      echo "</div>";
-      ?>
+
+      <div class="tags">
+        {% for tag in recipe.tags %}
+          <div class = 'tag'>{{tag.name}}</div>
+        {% endfor %}
+        <br>
+      </div>
     </div>
-  <nav> 
-  <a href="/index.php">Home</a>
-  <a href="/recipes/browseRecipes.php">Browse recipes</a>
-  <nav>
+    <nav>
+    <a href="/">Home</a>
+    <a href="/recipes/browseRecipes">Browse recipes</a>
+    <nav>
   </body>
 </html>
