--- a/templates/login/adminPanel.html
+++ b/templates/login/adminPanel.html
@@ -17,11 +17,11 @@
         </div>
     <nav>
       <a href="/">Home</a>
-      <a href="/recipes/browseRecipes.php">Browse recipes</a>
-      <a href='/recipes/newRecipe.php'>Add new recipe</a>
-      <a href='/loginSystem/logout.php'>Logout</a>
-      <a href='/loginSystem/login.php'>Log in</a>
-      <a href='/loginSystem/register.php'>Register</a>
+      <a href="/recipes/browseRecipes">Browse recipes</a>
+      <a href='/recipes/newRecipe'>Add new recipe</a>
+      <a href='/logout'>Logout</a>
+      <a href='/login'>Log in</a>
+      <a href='/register'>Register</a>
     </nav>
   </body>
 </html>
