--- a/templates/recipes/browseRecipes.html
+++ b/templates/recipes/browseRecipes.html
@@ -7,7 +7,7 @@
    </head>
    <body>
       <div class = 'searchPanel'>
-         <form id = 'search' action='/recipes/browseRecipes.php' method='get'>
+         <form id = ' search' action='/recipes/browseRecipes' method='post'>
             Text: <input type="text" name="textSearch">
             Tag: <input type="text" name="tag">
             Sort by: 
@@ -34,12 +34,12 @@
             {% endfor %}
       </div>
       <nav>
-            <a href="/index.php">Home</a>
-            <a href="/recipes/browseRecipes.php">Browse recipes</a>
-            <a href='/recipes/newRecipe.php'>Add new recipe</a>
-            <a href='/loginSystem/logout.php'>Logout </a>
-            <a href='/loginSystem/login.php'>Log in</a>
-            <a href='/loginSystem/register.php'>Register</a>
+            <a href="/">Home</a>
+            <a href="/recipes/browseRecipes">Browse recipes</a>
+            <a href='/recipes/newRecipe'>Add new recipe</a>
+            <a href='/logout'>Logout </a>
+            <a href='/login'>Log in</a>
+            <a href='/register'>Register</a>
       </nav>
    </body>
 </html>
