--- a/templates/recipes/recipe.html
+++ b/templates/recipes/recipe.html
@@ -34,7 +34,8 @@
 
       <div class="tags">
         {% for tag in recipe.tags %}
-          <div class = 'tag'>{{tag.name}}</div>
+          <div class = 'tag'>
+                    <a class ='moreLink' href='/recipes/recipe/{{recipe.id}}'> Read more! </a></div>
         {% endfor %}
         <br>
       </div>
