--- a/templates/login/adminPanel.html
+++ b/templates/login/adminPanel.html
@@ -12,7 +12,7 @@
           <p class = 'permissions'>{{user.privileges.value}}</p>
           <a href='/admin/remove/{{user.name}}'>Remove user</a><br>
           <a href='/admin/makeAdmin/{{user.name}}'>Give admin permission</a><br>
-          <a href='/admin/makeChef/{{user.name}}'>Give user permission</a>
+          <a href='/admin/makeChef/{{user.name}}'>Give user permission</a><br><br><br>
         {% endfor %}
         </div>
     <nav>
