--- a/templates/recipes/newRecipe.html
+++ b/templates/recipes/newRecipe.html
@@ -35,11 +35,11 @@
 	<div id="errors"></div>
 	<nav>
         <a href="/">Home</a>
-        <a href="/recipes/browseRecipes.html">Browse recipes</a>
-        <a href='/recipes/newRecipe.html'>Add new recipe</a>
-        <a href='/loginSystem/logout.html'>Logout </a>
-        <a href='/loginSystem/login.html'>Log in</a>
-        <a href='/loginSystem/register.html'>Register</a>
+        <a href="/recipes/browseRecipes">Browse recipes</a>
+        <a href='/recipes/newRecipe'>Add new recipe</a>
+        <a href='/logout'>Logout </a>
+        <a href='/login'>Log in</a>
+        <a href='/register'>Register</a>
   </nav>
   </body>
 </html>
