Remove user added

--- a/templates/login/adminPanel.html
+++ b/templates/login/adminPanel.html
@@ -10,9 +10,9 @@
         {% for user in users %}
           <p class = 'nickname'> {{user.name}}</p>
           <p class = 'permissions'>{{user.privileges.value}}</p>
-          <a href='/admin/remove/{{user.name}}'>Remove user</a><br>
-          <a href='/admin/makeAdmin/{{user.name}}'>Give admin permission</a><br>
-          <a href='/admin/makeChef/{{user.name}}'>Give user permission</a><br><br><br>
+          <a href='/admin/remove/{{user.id}}'>Remove user</a><br>
+          <a href='/admin/makeAdmin/{{user.id}}'>Give admin permission</a><br>
+          <a href='/admin/makeChef/{{user.id}}'>Give user permission</a><br><br><br>
         {% endfor %}
         </div>
     <nav>
