--- a/templates/login/adminPanel.html
+++ b/templates/login/adminPanel.html
@@ -15,13 +15,14 @@
           <a href='/admin/makeChef/{{user.id}}'>Give user permission</a><br><br><br>
         {% endfor %}
         </div>
-    <nav>
+  <nav>
       <a href="/">Home</a>
       <a href="/recipes/browseRecipes">Browse recipes</a>
       <a href='/recipes/newRecipe'>Add new recipe</a>
-      <a href='/logout'>Logout</a>
-      <a href='/login'>Log in</a>
+      <a href='/logout'>Logout  </a>
+      <a href='/admin'>Admin panel </a>
+      <a href='/login'>Login</a>
       <a href='/register'>Register</a>
-    </nav>
+  </nav>
   </body>
 </html>
