--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -23,9 +23,14 @@
         <p class="error">Nie udało się zalogować do systemu</p><br><br>
     {% endif %}
 
-    <nav>
-        <a href="/">Home</a>
-        <a href="/recipes/browseRecipes">Browse recipses</a>
-    <nav>
+  <nav>
+      <a href="/">Home</a>
+      <a href="/recipes/browseRecipes">Browse recipes</a>
+      <a href='/recipes/newRecipe'>Add new recipe</a>
+      <a href='/logout'>Logout  </a>
+      <a href='/admin'>Admin panel </a>
+      <a href='/login'>Login</a>
+      <a href='/register'>Register</a>
+  </nav>
   </body>
 </html>
