--- a/templates/recipes/newRecipe.html
+++ b/templates/recipes/newRecipe.html
@@ -33,13 +33,14 @@
 	</form>
 	<br><br><br><br><br>
 	<div id="errors"></div>
-	<nav>
-        <a href="/">Home</a>
-        <a href="/recipes/browseRecipes">Browse recipes</a>
-        <a href='/recipes/newRecipe'>Add new recipe</a>
-        <a href='/logout'>Logout </a>
-        <a href='/login'>Log in</a>
-        <a href='/register'>Register</a>
+  <nav>
+      <a href="/">Home</a>
+      <a href="/recipes/browseRecipes">Browse recipes</a>
+      <a href='/recipes/newRecipe'>Add new recipe</a>
+      <a href='/logout'>Logout  </a>
+      <a href='/admin'>Admin panel </a>
+      <a href='/login'>Login</a>
+      <a href='/register'>Register</a>
   </nav>
   </body>
 </html>
