--- a/templates/recipes/recipe.html
+++ b/templates/recipes/recipe.html
@@ -44,9 +44,14 @@
 
     <a href="/recipes/removeRecipe/{{recipe.id}}">Remove recipe</a><br><br>
 
-    <nav>
-    <a href="/">Home</a>
-    <a href="/recipes/browseRecipes">Browse recipes</a>
-    <nav>
+  <nav>
+      <a href="/">Home</a>
+      <a href="/recipes/browseRecipes">Browse recipes</a>
+      <a href='/recipes/newRecipe'>Add new recipe</a>
+      <a href='/logout'>Logout  </a>
+      <a href='/admin'>Admin panel </a>
+      <a href='/login'>Login</a>
+      <a href='/register'>Register</a>
+  </nav>
   </body>
 </html>
