--- a/templates/login/register.html
+++ b/templates/login/register.html
@@ -20,9 +20,14 @@
     {% if failed == 1 %}
         <p class="error">Nie udało się zarejestrować</p><br><br>
     {% endif %}
-	<nav> 
-        <a href="/">Home</a>
-        <a href="/recipes/browseRecipes">Browse recipes</a>
-    <nav>
+  <nav>
+      <a href="/">Home</a>
+      <a href="/recipes/browseRecipes">Browse recipes</a>
+      <a href='/recipes/newRecipe'>Add new recipe</a>
+      <a href='/logout'>Logout  </a>
+      <a href='/admin'>Admin panel </a>
+      <a href='/login'>Login</a>
+      <a href='/register'>Register</a>
+  </nav>
   </body>
 </html>
