--- a/templates/recipes/browseRecipes.html
+++ b/templates/recipes/browseRecipes.html
@@ -33,13 +33,14 @@
                 </div>
             {% endfor %}
       </div>
-      <nav>
-            <a href="/">Home</a>
-            <a href="/recipes/browseRecipes">Browse recipes</a>
-            <a href='/recipes/newRecipe'>Add new recipe</a>
-            <a href='/logout'>Logout </a>
-            <a href='/login'>Log in</a>
-            <a href='/register'>Register</a>
-      </nav>
+  <nav>
+      <a href="/">Home</a>
+      <a href="/recipes/browseRecipes">Browse recipes</a>
+      <a href='/recipes/newRecipe'>Add new recipe</a>
+      <a href='/logout'>Logout  </a>
+      <a href='/admin'>Admin panel </a>
+      <a href='/login'>Login</a>
+      <a href='/register'>Register</a>
+  </nav>
    </body>
 </html>
