--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
   <nav>
-      <a href="/">Home</a>
-      <a href="/recipes/browseRecipes">Browse recipes</a>
-      <a href='/recipes/newRecipe'>Add new recipe</a>
-      <a href='/logout'>Logout  </a>
-      <a href='/admin'>Admin panel </a>
-      <a href='/login'>Login</a>
-      <a href='/register'>Register</a>
+      <li><a href="/">Home</a></li>
+      <li><a href="/recipes/browseRecipes">Browse recipes</a></li>
+      <li><a href='/recipes/newRecipe'>Add new recipe</a></li>
+      <li><a href='/logout'>Logout  </a></li>
+      <li><a href='/admin'>Admin panel </a></li>
+      <li><a href='/login'>Login</a></li>
+      <li><a href='/register'>Register</a></li>
   </nav>
   </body>
 </html>
