--- a/static/assets/style.css
+++ b/static/assets/style.css
@@ -31,22 +31,12 @@ p {
 font-size : 2em;
 }
 
-.posVote{
-  background-color: lightgreen;
-}
-
-.negVote{
-  background-color: lightsalmon;
-}
-
-
 .recipe{
 background-color: lightslategray;
 width: 500px;
 border: 5px solid red;
 padding: 10px;
 margin: 10px;
-
 }
 
 .recipes{  
@@ -60,9 +50,26 @@ margin: 10px;
     background-color: red;
 }
 
-nav > a{
-width: 50px;
-  border: 3px solid black;
-  padding: 5px;
-  margin: 5px;
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111;
 }
