--- a/templates/recipes/browseRecipes.html
+++ b/templates/recipes/browseRecipes.html
@@ -6,6 +6,15 @@
         <link rel="stylesheet" type= "text/css" href="{{ url_for('static',filename='assets/style.css') }}">
    </head>
    <body>
+    <nav>
+      <a href="/">Home</a>
+      <a href="/recipes/browseRecipes">Browse recipes</a>
+      <a href='/recipes/newRecipe'>Add new recipe</a>
+      <a href='/logout'>Logout  </a>
+      <a href='/admin'>Admin panel </a>
+      <a href='/login'>Login</a>
+      <a href='/register'>Register</a>
+  </nav><br><br>
       <div class = 'searchPanel'>
          <form id = ' search' action='/recipes/browseRecipes' method='post'>
             Text: <input type="text" name="textSearch">
@@ -32,14 +41,7 @@
                 </div>
             {% endfor %}
       </div>
-  <nav>
-      <a href="/">Home</a>
-      <a href="/recipes/browseRecipes">Browse recipes</a>
-      <a href='/recipes/newRecipe'>Add new recipe</a>
-      <a href='/logout'>Logout  </a>
-      <a href='/admin'>Admin panel </a>
-      <a href='/login'>Login</a>
-      <a href='/register'>Register</a>
-  </nav>
+      <br><br>
+
    </body>
 </html>
