--- a/templates/recipes/newRecipe.html
+++ b/templates/recipes/newRecipe.html
@@ -6,6 +6,15 @@
     <link rel="stylesheet" type= "text/css" href="{{ url_for('static',filename='assets/style.css') }}">
   </head>
   <body>
+   <nav>
+      <a href="/">Home</a>
+      <a href="/recipes/browseRecipes">Browse recipes</a>
+      <a href='/recipes/newRecipe'>Add new recipe</a>
+      <a href='/logout'>Logout  </a>
+      <a href='/admin'>Admin panel </a>
+      <a href='/login'>Login</a>
+      <a href='/register'>Register</a>
+  </nav><br><br>
   <script src="{{ url_for('static',filename='assets/newRecipeScripts.js') }}"> </script>
   	<form id="form1" action="/recipes/newRecipe" method="post">
 		<label for="title">Title: </label><br>
@@ -27,20 +36,17 @@
 		<input type = "button" onClick="removeStep()" value="Remove previous step">
 		<div id="steps"> </div>
 
+
+		<label for="video">Video: </label><br>
+		<input type="text" id="video" name="video"><br>
+
+
 		<label for="tags">Tags: </label><br>
 		<input type="text" id="tags" name="tags"><br>
 		<input type="submit" value="Add recipe"><br>
 	</form>
 	<br><br><br><br><br>
 	<div id="errors"></div>
-  <nav>
-      <a href="/">Home</a>
-      <a href="/recipes/browseRecipes">Browse recipes</a>
-      <a href='/recipes/newRecipe'>Add new recipe</a>
-      <a href='/logout'>Logout  </a>
-      <a href='/admin'>Admin panel </a>
-      <a href='/login'>Login</a>
-      <a href='/register'>Register</a>
-  </nav>
+
   </body>
 </html>
