Added css styles

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,13 +7,17 @@
   </head>
   <body>
   <nav>
-      <li><a href="/">Home</a></li>
-      <li><a href="/recipes/browseRecipes">Browse recipes</a></li>
-      <li><a href='/recipes/newRecipe'>Add new recipe</a></li>
-      <li><a href='/logout'>Logout  </a></li>
-      <li><a href='/admin'>Admin panel </a></li>
-      <li><a href='/login'>Login</a></li>
-      <li><a href='/register'>Register</a></li>
+      <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/recipes/browseRecipes">Browse recipes</a></li>
+          <li><a href='/recipes/newRecipe'>Add new recipe</a></li>
+          <li><a href='/logout'>Logout  </a></li>
+          <li><a href='/admin'>Admin panel </a></li>
+          <li><a href='/login'>Login</a></li>
+          <li><a href='/register'>Register</a></li>
+      </ul><br><br>
   </nav>
+  <h1>Witaj na stronie z przepisami!</h1>
+  <h2>Strona stworzona na potrzeby początkujących i doświadczonych kucharzy, by mogli dzielić się swoimi pysznościami z innymi.</h2>
   </body>
 </html>
