--- a/static/assets/style.css
+++ b/static/assets/style.css
@@ -1,6 +1,15 @@
+
+* {
+  box-sizing: border-box;
+}
+
 p {
   padding: 1px;
   margin: 1px;
+}
+
+body {
+  background-color: Gainsboro;
 }
 
 .user{
@@ -11,21 +20,6 @@ p {
   margin: 10px;
 }
 
-.step{  
-  background-color: #bdb3b3;
-  width: 500px;
-  border: 2px solid green;
-  padding: 20px;
-  margin: 20px;
-}
-
-.ingredient{  
-  background-color: #bdb3b3;
-  width: 200px;
-  border: 2px solid green;
-  padding: 5px;
-  margin: 10px;
-}
 
 .title{
 font-size : 2em;
@@ -33,17 +27,13 @@ font-size : 2em;
 
 .recipe{
 background-color: lightslategray;
-width: 500px;
-border: 5px solid red;
 padding: 10px;
-margin: 10px;
+margin: 30px;
+box-shadow: rgba(0, 0, 0, 0.56) 0px 22px 70px 4px;
 }
 
 .recipes{  
-  width: 850px;
-  border: 15px solid black;
-  padding: 20px;
-  margin: 20px;
+
 }
 
 .error{
@@ -73,3 +63,165 @@ li a {
 li a:hover {
   background-color: #111;
 }
+
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: center;
+}
+
+input[type=button] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 4px 5px;
+  border: none;
+  border-radius: 1px;
+  cursor: pointer;
+  float: left;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+input[type=button]:hover {
+  background-color: #45a049;
+}
+
+.searchPanel::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.box {
+  float: left;
+  width: 25%;
+  padding:25px;
+  height: 100px;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+
+.ingr {
+  float: left;
+  width: 75%;
+  margin-top: 2px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.login
+{
+  width: 15% !important;
+  padding: 8px !important;
+  border: 1px solid #ccc !important;
+  border-radius: 4px !important;
+  resize: vertical;
+}
+
+.password
+{
+  width: 15%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+.ingredient
+{
+  width: 40%;
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid #000;
+  border-radius: 4px;
+  resize: vertical;
+  text-align: center;
+}
+
+.step{
+  width: 40%;
+  padding: 10px;
+  margin: 5px;
+  border: 1px solid #000;
+  border-radius: 4px;
+  resize: vertical;
+  text-align: center;
+}
+
+.posVotes
+{
+  height:20px;
+  width: 100px;
+  box-shadow: 0 0 10px 5px green;
+}
+
+.negVotes
+{
+  width: 100px;
+  height:20px;
+  box-shadow: 0 0 10px 5px red;
+}
+
+.recipe-section {
+  float: left;
+  width: 50%; /* three boxes (use 25% for four, and 50% for two, etc) */
+  padding: 50px; /* if you want space between the images */
+}
+
+.author
+{
+  width: 15%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+  text-align: center;
+}
+
+h1 { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 100px; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center; }
+h2 { color: #111; font-family: 'Open Sans', sans-serif; font-size: 30px; font-weight: 300; line-height: 32px; margin: 0 0 20px; text-align: center; }
+h3 { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 45px; font-weight: 300; line-height: 32px; margin: 0 0 72px; text-align: center; }
+h4 { color: #111; font-family: 'Helvetica Neue', sans-serif; font-size: 15px; font-weight: 20; line-height: 32px; margin: 0 0 0px; text-align: center; }
+
