--- a/templates/recipes/browseRecipes.html
+++ b/templates/recipes/browseRecipes.html
@@ -6,37 +6,55 @@
         <link rel="stylesheet" type= "text/css" href="{{ url_for('static',filename='assets/style.css') }}">
    </head>
    <body>
-    <nav>
-      <a href="/">Home</a>
-      <a href="/recipes/browseRecipes">Browse recipes</a>
-      <a href='/recipes/newRecipe'>Add new recipe</a>
-      <a href='/logout'>Logout  </a>
-      <a href='/admin'>Admin panel </a>
-      <a href='/login'>Login</a>
-      <a href='/register'>Register</a>
-  </nav><br><br>
+  <nav>
+      <ul>
+          <li><a href="/">Home</a></li>
+          <li><a href="/recipes/browseRecipes">Browse recipes</a></li>
+          <li><a href='/recipes/newRecipe'>Add new recipe</a></li>
+          <li><a href='/logout'>Logout  </a></li>
+          <li><a href='/admin'>Admin panel </a></li>
+          <li><a href='/login'>Login</a></li>
+          <li><a href='/register'>Register</a></li>
+      </ul><br><br>
+  </nav>
       <div class = 'searchPanel'>
          <form id = ' search' action='/recipes/browseRecipes' method='post'>
-            Text: <input type="text" name="textSearch">
-            Tag: <input type="text" name="tag">
-            Sort by: 
-            <select id="sort" name="sort">
-               <option value="default">Default</option>
-               <option value="fromBest">From the best</option>
-               <option value="fromWorst">From the worst</option>
-            </select>
-            <input type="submit" value="Search">
+             <div class="box" style="background-color:#bbb">
+              Text: <input type="text" name="textSearch">
+             </div>
+
+             <div class="box" style="background-color:#bbb">
+                Tag: <input type="text" name="tag">
+             </div>
+
+             <div class="box" style="background-color:#bbb">
+                 Sort by:
+                <select id="sort" name="sort">
+                   <option value="default">Default</option>
+                   <option value="fromBest">From the best</option>
+                   <option value="fromWorst">From the worst</option>
+                </select>
+             </div>
+
+             <div class="box" style="background-color:#bbb">
+                 <br>
+                 <input type="submit" value="Search">
+             </div>
          </form>
       </div>
+        <br><br><br>
       <div class = "recipes">
          <h3> Recipes! </h3>
             {% for recipe in recipes %}
                 <div class="recipe">
-                    <p class = 'title'> {{recipe.title}}</p>
-                    <p class = 'description'>{{recipe.description}}</p>
-                    <p class = 'author'>{{recipe.owner}}</p>
+                    <h2>{{recipe.title}}</h2>
+                    <h4>{{recipe.description}}</h4>
+                    <p class = 'author'>author: {{recipe.owner}}</p>
+                    <br>
                     <p class = 'posVotes'>Votes up: {{recipe.votesUp}}</p>
+                    <br>
                     <p class = 'negVotes'>Votes down: {{recipe.votesDown}}</p>
+                    <br>
                     <a class ='moreLink' href='/recipes/recipe/{{recipe.id}}'> Read more! </a>
                 </div>
             {% endfor %}
